# GeminiAudio2Audio

./: .env  README.md  api.py  backend_reference.py  geminiAI.py  main.py  pyproject.toml  web_logging.py
geminiaudio2audio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
static/: app.js  index.html  index2.html  style.css
