[project]
name = "geminiaudio2audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.5.1",
    "mss>=9.0.1",
    "opencv-python>=4.9.0",
    "pillow>=10.2.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "websockets>=12.0",
]

